<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ui_back">Back</string>
    <string name="ui_more_options">More options</string>
    <string name="ui_play">Play</string>
    <string name="ui_pause">Pause</string>
    <string name="ui_replay">Replay</string>
    <string name="ui_skip_next">Next song</string>
    <string name="ui_skip_previous">Previous song</string>
    <string name="ui_repeat">Repeat</string>
...
