...
    <string name="library_downloaded_songs">Individual songs</string>
    <string name="library_downloaded_songs_empty_description">Songs you download one by one show up here.</string>
    <string name="library_downloaded_empty_title">Nothing downloaded yet</string>
    <string name="library_downloaded_empty_description">Download songs, albums and playlists to listen without a connection.</string>
    <string name="library_albums_empty_title">No albums yet</string>
    <string name="library_albums_empty_description">Albums you add to your library show up here.</string>
    <string name="library_title">Your Library</string>
    <string name="library_favorites">Liked songs</string>
    <string name="library_playlist">Playlist</string>
    <string name="library_recents">Recents</string>
    <string name="library_open_search">Search your library</string>
    <string name="library_create_playlist">Create playlist</string>
    <string name="library_view_as_grid">Show as grid</string>
    <string name="library_view_as_list">Show as list</string>
...
